--- a/style/influencer.css
+++ b/style/influencer.css
@@ -6,6 +6,7 @@
     padding: 0%;
     margin: 0%;
 }
+
 /* nav style section */
 
 header {
@@ -25,6 +26,8 @@ nav {
     display: flex;
     text-decoration: none;
     justify-content: space-between;
+    align-items: center;
+    padding-bottom: 120px;
 }
 
 a,
@@ -32,8 +35,8 @@ a,
     text-decoration: none;
     margin-right: 25px;
     color: #3A3A3A;
-font-size: 16px;
-font-weight: 600;
+    font-size: 16px;
+    font-weight: 600;
 }
 
 nav h3 {
@@ -41,4 +44,65 @@ nav h3 {
     font-size: 24px;
     font-weight: 700;
     width: 245px;
+}
+
+.head {
+    display: flex;
+    
+    
+    
+}
+
+.head-left {
+   padding-right:130px ;
+}
+
+.head-title {
+    color: #3A3A3A;
+    font-size: 50px;
+    font-weight: 700;
+    line-height: 60px;
+    width: 580px;
+    height: 130px;
+}
+
+.head-discription {
+    color: #3A3A3A;
+    font-size: 16px;
+    font-weight: 600;
+    width: 500px;
+    height: 60px;
+
+}
+
+.head-right {
+    padding-top: 50px;
+}
+
+.head-img1 {
+    position: absolute;
+    z-index: 1;
+    width: 400px;
+    height: 375px;
+
+}
+
+.head-img2 {
+    position: absolute;
+    width: 400px;
+    height: 375px;
+    
+
+
+
+}
+
+button {
+    border-radius: 41px;
+    background: #E02C6D;
+    display: inline-flex;
+    padding: 10px 24px;
+    align-items: flex-start;
+    gap: 8px;
+    border: 0;
 }
