--- a/style/influencer.css
+++ b/style/influencer.css
@@ -112,13 +112,79 @@ button {
     display: flex;
     justify-content: space-around;
     align-items: center;
-   padding: 200px 120px 0px 120px;
-   width: auto;
-   
+    padding: 200px 120px 0px 120px;
+    width: auto;
+
 }
 
-.logo{
+.logo {
     padding: 30px;
-    
 
+
+}
+
+/* Popular Collection style section */
+.Popular-Collection-title {
+    color: #3A3A3A;
+    font-size: 28px;
+    font-weight: 600;
+    padding: 40px;
+    text-align: center;
+}
+
+.popular-head {
+    padding: 100px 210px;
+}
+
+.popular-container {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 30px;
+
+    max-width: 1440px;
+    align-items: center;
+    justify-content: center;
+}
+
+.gallary {
+    padding: 5px;
+    border-radius: 10px;
+    background: #FFF;
+    width: 330px;
+    height: 475px;
+
+    box-shadow: 0px 0px 40px 0px rgba(0, 0, 0, 0.15);
+}
+
+.see-more {
+    color: rgba(224, 44, 109, 0.87);
+    font-size: 16px;
+    font-weight: 700;
+    margin-top: 10px;
+    text-align: end;
+}
+
+.gallary h3 {
+    color: #18191F;
+    font-size: 28px;
+    font-weight: 500;
+    line-height: 40px;
+    padding: 5px;
+}
+
+.gallary p {
+    color: #787885;
+    font-size: 14px;
+    font-weight: 600;
+    width: 160px;
+    letter-spacing: 0.252px;
+    padding: 5px;
+  
+}
+
+.gallary .p1 {
+    color: rgba(0, 0, 0, 0.87);
+    font-size: 24px;
+    font-weight: 400;
+    padding: 5px;
 }
