--- a/style/influencer.css
+++ b/style/influencer.css
@@ -153,11 +153,11 @@ button {
     width: 330px;
     height: 475px;
 
-    box-shadow: 0px 0px 40px 0px rgba(0, 0, 0, 0.15);
+    box-shadow: 0px 0px 40px 0px black;
 }
 
 .see-more {
-    color: rgba(224, 44, 109, 0.87);
+    color:rgb(238, 40, 238);
     font-size: 16px;
     font-weight: 700;
     margin-top: 10px;
@@ -179,12 +179,56 @@ button {
     width: 160px;
     letter-spacing: 0.252px;
     padding: 5px;
-  
+
 }
 
 .gallary .p1 {
-    color: rgba(0, 0, 0, 0.87);
+    color: black;
     font-size: 24px;
     font-weight: 400;
     padding: 5px;
+}
+
+/* footer style section */
+footer {
+    background: #0A0826;
+    max-width: 1440px;
+    height: 300px;
+    padding: 150px 0 0 0;
+    text-align: center;
+}
+
+
+.footer-title h3 {
+    color: #FFF;
+    font-size: 24px;
+    font-weight: 700;
+    padding: 5px;
+}
+
+.footer-title p {
+    color: #D9DBE1;
+    font-size: 14px;
+    font-weight: 700;
+    padding: 5px;
+}
+
+.pp2 {
+    color: #D9DBE1;
+    font-size: 14px;
+    font-weight: 700;
+  
+}
+
+.footer-logo11 {
+ display: flex;
+   justify-content: center;
+   padding-top: 10px;
+    
+}
+.img-logo{
+    width: 2%;
+    margin-right:10px ;
+  
+   
 }
